Migrate misc tests